# ClPath

./: CMakeLists.txt  configuration.hpp  cpu_algorithm.cpp  cpu_algorithm.hpp  datatypes.h  gpu_algorithm.cpp  gpu_algorithm.hpp  kernel.cl  main.cpp  mmul.cl  utils.h  visualization.cpp  visualization.hpp
